# BlockReader

./: .gitignore  AnalyticsPanel.qml  AttributeRow.qml  BlockPropertyPanel.qml  CMakeLists.txt  FormulaRow.qml  Main.qml  Plan.md  Project_Summary.md  README.md  fig_0924_10105.csv  main.cpp
Docs/: BlockModelReader_Architecture.md  BlockModelReader_Tasks.md  Memory_Optimization_String_Attributes.md  MeshWrapper.md  String_Interning_Architecture.md  crash_report_move_semantics.md  flow.md  log.md
MicromineProxy/: MicromineProxy.csproj  Program.cs
include/BlockModel/: AnalyticsEngine.h  BlockModel.h  FormulaEvaluator.h  Instancing.h  MicromineReader.h  ModelDiagnostics.h  Optimizer.h  Reader.h  SpatialIndex.h  SubprocessReader.h
src/BlockModel/: AnalyticsEngine.cpp  FormulaEvaluator.cpp  Instancing.cpp  MicromineReader.cpp  Optimizer.cpp  Reader.cpp  SpatialIndex.cpp  SubprocessReader.cpp
